      unused settings \samp{F77} and \samp{FCPIFCPLAGS}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item Detection of the C stack direction has been moved from
      run-time to \command{configure}: this is safer with LTO builds and
      allows the detection to be overridden -- see file \file{config.site}.
      
      \item User-set \samp{DEFS} (e.g., in \file{config.site} is now
      used for compiling packages (including base packages).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{formula(x)} with \code{length(x) > 1} character vectors,
      is deprecated now.  Such use has been rare, and has \sQuote{worked}
      as expected in some cases only.  In other cases, wrong \code{x} have
      silently been truncated, not detecting previous errors.

      \item Long-standing issue where the X11 device could lose events
      shortly after startup has been addressed \PR{16702}.

      \item \code{rbind.data.frame()} no longer drops \code{<NA>} levels
      from factor columns by default, \PR{17562}.

      \item \code{available.packages()} and hence \code{install.packages()}
      now pass their \code{...} to \code{download.file()}, fulfilling the
      wish of \PR{17532}.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.0 patched}{
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The use of a character vector with \code{.Fortran()} is
      formally deprecated and gives a non-portability warning.  (It has
      long been strongly discouraged in \sQuote{Writing R Extensions}.)
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item On Windows, GUI package installation via \code{menuInstallPkgs()}
      works again, thanks to Len Weil's and Duncan Murdoch's \PR{17556}.

      \item \command{R CMD check} on \code{data()} fixing \PR{17558}
      thanks to Duncan Murdoch.

      \item \code{quasi(*, variance = list(..))} now works more